--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "lint": "eslint ."
+
   },
   "keywords": [],
   "author": "",
@@ -25,7 +27,9 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.28.0",
     "eslint": "^8.57.1",
+    "globals": "^16.2.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3",
     "sequelize-cli": "^6.6.2"
